--- a/bookish-app.xcodeproj/xcshareddata/xcschemes/bookish-app.xcscheme
+++ b/bookish-app.xcodeproj/xcshareddata/xcschemes/bookish-app.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "597EEBB22B6D835900DBABFF"
+               BuildableName = "bookish-appTests.xctest"
+               BlueprintName = "bookish-appTests"
+               ReferencedContainer = "container:bookish-app.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
